
package TENC;

message Request
{
	message Impression
	{
		message Banner
		{
			optional uint32 width = 1;     		//广告位宽度
			optional uint32 height = 2;    		//广告位高度
			repeated string mimes = 3;          //支持的素材类型(如 "jpg","swf")
			optional string extra_style = 4;	//该广告位除广告位规格外额外允许投放的素材尺寸：960*90;1000*90(分号分隔多个 宽*高)
			optional uint32 visibility = 5;		//广告位所在的屏幕位置: 0:未知 1：首屏 2：非首屏
		}
		message Video
		{
			repeated string mimes = 1;     		//支持播放的内容类型(如 "flv","swf")
			optional uint32 linearity = 2; 		//目前没有实际作用，linear/in-stream(1) or non-linear/overlay(2)
			optional uint32 minduration = 3; 	//广告视频最短时长
			optional uint32 maxduration = 4;  	//广告视频最长时长
			optional uint32 protocol = 5;  	 	//目前没有实际作用，vast 1.0/2.0/3.0/wrapper
			optional uint32 width = 6;     		//广告位宽度
			optional uint32 height = 7;    		//广告位高度
		}
		optional string id = 1;     			//标识每一次曝光的唯一ID
		optional string tagid = 2;     			//广告位ID，同资源报表中的广告位ID，如 Ent_F_Width1
		optional float bidfloor = 3;   			//曝光底价，单位 千次曝光分
		optional Banner banner = 4;    			//banner广告位
		optional Video video = 5;      			//video广告位
		optional string clientid = 6;			//CPD ADX使用字段，DSP依据该字段非空识别为CPD CPM MINDX广告，同时该字段含有该次展示的广告客户ID
		optional string tradecode = 7;       	//该广告位的限制行业编码列表，如：018;014;008;006;001;004;002
		optional string sns_lists = 8;			//(暂停使用) 该广告位允许的社交化播放形式列表
		
	}
	message Site
	{
		optional string name = 1; 				//网站名称
		optional string page = 2; 				//当前页面url
		optional string ref = 3;  				//referrer url
	}
	message Device
	{
		optional string ip = 1; 				//设备ip
		optional string ua = 2; 				//设备user agent
	}
	message User
	{  
		optional string id = 1; 				//tuid,tencent user id
		optional string buyerid=2; 				//cookie mapping 匹配的 dsp user id
		optional string gender = 3;     		//(目前不使用) M 代表男 F 代表女 不填代表未知
		optional uint32 age = 4;        		//(目前不使用) 年龄（0-20（0）、21-30（1）、31-40（2）、41-50(3)、51-60(4)、60+(5)这几个分段）不填代表未知
	}
	

	optional string id = 1;          			//bid request id, 一次bid request可能会包含多个曝光(impression)
	optional uint32 at = 2; 					//拍卖方式，1为first pricing, 2为second pricing，目前统一为2
	optional Site site = 3;          			//媒体站点信息
	optional Device device = 4;      			//设备信息
	optional User user = 5;          			//用户信息
	repeated Impression impression = 6; 		//曝光机会，一次请求可含多个广告位，每个广告位为一次曝光机会

}

message Response
{
	message Bid                 
	{
		optional string id = 1;     			//response id per impression(dsp 标识曝光的ID)
		optional string impid = 2;     			//必须有，标识曝光ID(设置为对应Request.Impression.id)
		optional float price = 3;     			//出价，单位千次曝光分
		optional string adid = 4;      			//广告ID或订单ID
		optional string nurl = 5;      			//目前不建议使用，win notice url
		optional string adm = 6;       			//ad material, 广告素材url 	
		optional string ext = 7;       			//extendata from dsp，将通过曝光监测和点击监测带回。(base64 encoded preferred，256字节以内)
		optional string adm_para = 8;			//传递给adm的参数列表字符串,如 http://creative.dsp.mediav.com/aa.html?cid=xxxx&pid=xxxx  该字段填充'?'后的部分,不包括问号
	}

	message SeatBid
	{
		repeated Bid bid = 1;					//与request中的impression对应，可以对多个impression回复参与竞价，也可以对其中一部分回复参与竞价
	}

	optional string id = 1;          			//bid request id, 同请求ID Request.id，必须有
	optional string bidid = 2; 	 				//没有实际使用，bid response id
	repeated SeatBid seatbid = 3;  				//回复参与竞价信息， 目前只支持将回复结果设置在seatbid[0]
	
}

